--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jw/vue-components-v2": "^1.0.263",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "echarts": "^4.2.1",
+    "element-ui": "^2.10.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-url": "^8.0.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
