--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@jw/vue-components-v2": "^1.0.263",
+    "@vue/eslint-config-standard": "^4.0.0",
     "core-js": "^2.6.5",
     "echarts": "^4.2.1",
     "element-ui": "^2.10.1",
